# TORQ-CONSOLE

./: .dockerignore  .env  .env.backup  .env.example  .env.validation  .gitignore  .nixpacks.toml  .railwayignore  .torq_agent_json  .vercelignore  AGENT_FRAMEWORKS_USED.md  AGENT_IMPLEMENTATION_STATUS.md  AGENT_MEMORY_SYSTEMS_RESEARCH.md  AGENT_USER_GUIDE.md  ALL_FIXES_SUMMARY.md  ALL_PHASES_COMPLETE_SUMMARY.md  ANALYSIS_SUMMARY.md  API_DOCUMENTATION.md  APPLY_MIGRATION_INSTRUCTIONS.md  ARCHITECTURE.md  ARCHITECTURE_INDEX.md  AUTH_SWITCHER_GUIDE.md  AZURE_RESEARCH_TEST_REPORT.md  BACKEND_WEB_SEARCH_BUG_FIX.md  BENCHMARKING_GUIDE.md  BRANCH_COMPARISON.md  BROWSER_AUTOMATION_PHASE_1.7_DELIVERY.md  BUG_ANALYSIS_REPORT.md  BUG_FIX_SUMMARY.md  BUILD_APP_GUIDE.md  BUILD_MODE_NOT_WORKING_DIAGNOSIS.md  BUTTON_TOGGLE_FIX.md  CAPABILITIES.md  CAPABILITY_VALIDATION_VERIFICATION.md  CHANGELOG.md  CHECK_RAILWAY_COMMIT.md  CHROME_BRIDGE_QUICKSTART.md  CHROME_BRIDGE_README.md  CLAUDE.md  CLAUDE_CHROME_INTEGRATION_GUIDE.md  (+570 more)
.claude/: TESTING_PROTOCOL.md  config.json  sessionStart.py  settings.local.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.torq-data/: prince_learning.json
.torq-index/: documents.pkl  index.faiss
.torq-specs/: constitutions.json  specifications.json  task_plans.json
api/: chat_proxy.py  index.py  proxy.ts  requirements.txt  vercel_proxy.py
chrome_bridge/: com.torq.chrome_bridge.json  host.py  install.bat  install.sh  run_host.bat  run_host.sh  run_http_only.bat  run_http_only.sh  test.py
chrome_extension/: background.js  generate_icons.py  manifest.json  popup.html  popup.js
docker/: docker-compose.validation.yml
docs/: 5_FAILURE_PATTERNS.md  ARCHITECTURAL_LOCKS.md  ARCHITECTURE_DIAGRAM.md  CLAUDE_CODE_AND_API_REVIEW.md  CONTROLFLOW_INTEGRATION_ANALYSIS.md  CONTROLFLOW_QUICKSTART.md  CONTROLFLOW_SUMMARY.md  DASHBOARD_IMPLEMENTATION_GUIDE.md  DASHBOARD_PRD_v5.1.md  DAY_1_START_CHECKLIST.md  FINAL_VALIDATION.md  IMPLEMENTATION_SUMMARY.md  INSIGHT_PUBLISHING_COMPLETE_STATUS.md  INSIGHT_PUBLISHING_MILESTONES_1_2_3_COMPLETE.md  INSIGHT_PUBLISHING_OVERVIEW.md  MARVIN_INTEGRATION_ANALYSIS.md  MARVIN_QUICKSTART.md  MARVIN_SUMMARY.md  METADATA_HARDENING.md  MIGRATION_SETUP_GUIDE.md  NEXT_SESSION_PHASE_5_3.md  OPERATIONAL_GUIDE.md  PHASE2_CONTENT_SAFETY.md  PHASE2_TEST_RESULTS.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_PLUGIN_ARCHITECTURE.md  PHASE4_CONTENT_SYNTHESIS.md  PHASE4_USAGE_GUIDE.md  PHASE5_COMPLETION_SUMMARY.md  PHASE5_EXPORT_UX.md  PHASE_4H_1_CLOSED.md  PHASE_4H_1_MILESTONE_1_COMPLETE.md  PHASE_4H_1_MILESTONE_2_COMPLETE.md  PHASE_4H_1_MILESTONE_3_COMPLETE.md  PHASE_4H_1_MILESTONE_4_COMPLETE.md  PHASE_4H_1_OVERVIEW.md  PHASE_5_1_EXECUTION_FABRIC.md  PHASE_5_1_SUPABASE_SETUP.md  PHASE_5_2_COMPLETE.md  PHASE_5_3_MILESTONES_1_2_FIX_SUMMARY.md  (+44 more)
evaluation_results/: baseline_20251108_235035.json  baseline_20251108_235738.json
examples/: QUICKSTART.md  README.md  core_agent_usage.py  enhanced_prince_flowers_demo.py  marvin_integration_examples.py  n8n_architect_examples.py
experiment_results/: LAYER17_MIGRATION_SUMMARY.md  MIGRATION_STATUS.md  apply_layer17_migration_rest.py  apply_migration.py  execute_layer17_migration.py  execute_migration_and_cycle.py  experiment_50f7ff0e-e326-412f-a1d6-c7ffdcc197a7_20251108_235923.json  experiment_df3f1f2a-8dab-4cc4-a41d-d90555987693_20251108_235643.json  layer17_cycle_001.md  layer17_cycle_001_with_persistence.md  layer17_cycle_002.md  run_cycle_001.py  run_cycle_002.py  run_layer17_cycle.py  run_layer17_cycle_with_db.py
frontend/: .vercelignore  CHAT_STREAMING_PRD_COMPLIANCE.md  CHAT_STREAMING_VERIFICATION_REPORT.md  LOCAL_PROD_COMPLETE.md  LOCAL_PROD_SETUP_GUIDE.md  PHASE_3_VERIFICATION_REPORT.md  PHASE_4.1_VERIFICATION_REPORT.md  README.md  SESSION_COMPLETE_SUMMARY.md  VITE_CONFIG_GUIDE.md  WORKFLOW_BUILDER_DELIVERY_SUMMARY.md  WORKFLOW_BUILDER_QA_TEST_PLAN.md  WORKFLOW_PLANNER_TESTING_GUIDE.md  WORKFLOW_PLANNING_COPILOT_COMPLETE.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  test_browser.js  test_btc_research.cjs  test_btc_research_v2.cjs  test_chat_debug.cjs  test_final_verification.cjs  test_standalone_badge.cjs  torq_verification_test.cjs  torq_verification_test.js  torq_verification_test_v2.cjs  torq_verification_test_v3.cjs  tsconfig.json  vercel.json  verify-workflow-api.sh  vite.config.ts  vitest.config.ts
infrastructure/: README.md  STEP2_COMPLETE.md  __init__.py  requirements.txt  tracing.py  tracing_decorator.py  tracing_fastapi.py  tracing_middleware.py  tracing_test.py  verify_tracing.py
landing-page/: .gitignore  DEPLOYMENT.md  PRE-DEPLOYMENT-CHECKLIST.md  PROJECT-SUMMARY.md  QUICK-START.md  README.md  STRUCTURE.txt  deploy-github-pages.bat  deploy-netlify.bat  deploy-vercel.bat  index.html  netlify.toml  robots.txt  sitemap.xml  styles.css  vercel.json
(+1422 files in other folders)
