[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torq-console"
version = "0.60.0"
description = "An enhanced evolution of Aider with MCP integration for agentic workflows"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "B Flowers", email = "bflowers@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "prompt_toolkit>=3.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
    "aiofiles>=23.0.0",
    "websockets>=11.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
voice = [
    "SpeechRecognition>=3.10.0",
    "pyttsx3>=2.90",
]
ollama = [
    "ollama>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

[project.scripts]
torq = "torq_console.cli:main"

[project.urls]
Homepage = "https://github.com/pilotwaffle/TORQ-CONSOLE"
Repository = "https://github.com/pilotwaffle/TORQ-CONSOLE"
Issues = "https://github.com/pilotwaffle/TORQ-CONSOLE/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["torq_console*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true