[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torq-console"
version = "0.70.0"
description = "Enhanced AI pair programmer with MCP integration, Claude Code compatibility, and polished UX"
authors = [
    {name = "B Flowers", email = "flowers@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "coding", "mcp", "assistant", "claude", "aider"]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "websockets>=11.0.0",
    "gitpython>=3.1.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.8.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "jsonrpcserver>=5.0.0",
    "jsonrpcclient>=4.0.0",
    "psutil>=5.9.0",
    "watchdog>=3.0.0",
    "typer>=0.9.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "marvin>=3.0.0",
]

[project.optional-dependencies]
voice = [
    "SpeechRecognition>=3.10.0",
    "pyttsx3>=2.90",
    "pyaudio>=0.2.11",
    "openai-whisper>=20231117",
]
visual = [
    "pygments>=2.15.0",
    "pillow>=10.0.0",
]
context = [
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
torq = "torq_console.cli:main"
torq-console = "torq_console.cli:main"

[project.urls]
Homepage = "https://github.com/pilotwaffle/TORQ-CONSOLE"
Repository = "https://github.com/pilotwaffle/TORQ-CONSOLE"
Issues = "https://github.com/pilotwaffle/TORQ-CONSOLE/issues"
Documentation = "https://github.com/pilotwaffle/TORQ-CONSOLE/wiki"

[tool.setuptools.packages.find]
where = ["."]
include = ["torq_console*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=torq_console --cov-report=html --cov-report=term-missing"